add jwt