@@ -2,16 +2,15 @@ package com.bridglabz.cart.service;
 
 import com.bridglabz.cart.client.ProductClient;
 import com.bridglabz.cart.dto.*;
-import com.bridglabz.cart.entity.Cart;
 import com.bridglabz.cart.entity.CartItem;
 import com.bridglabz.cart.repository.CartRepository;
+import com.bridglabz.cart.service.CartService;
+import jakarta.transaction.Transactional;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 
-import java.util.ArrayList;
 import java.util.List;
-import java.util.Optional;
-
+import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -22,65 +21,61 @@ public class CartServiceImpl implements CartService {
 
     @Override
     public void addToCart(Long userId, AddToCartRequest request) {
-        ProductResponse product = productClient.getProductById(request.getProductId());
-        Cart cart = cartRepository.findByUserId(userId).orElse(new Cart(null, userId, new ArrayList<>()));
+        CartItem item = cartRepository.findByCustomerIdAndProductId(userId.intValue(), request.getProductId())
+                .map(existing -> {
+                    existing.setQuantity(existing.getQuantity() + request.getQuantity());
+                    return existing;
+                })
+                .orElse(CartItem.builder()
+                        .customerId(userId.intValue())
+                        .productId(request.getProductId())
+                        .quantity(request.getQuantity())
+                        .build());
 
-        Optional<CartItem> existingItem = cart.getItems().stream()
-                .filter(item -> item.getProductId().equals(request.getProductId()))
-                .findFirst();
-
-        if (existingItem.isPresent()) {
-            existingItem.get().setQuantity(existingItem.get().getQuantity() + request.getQuantity());
-        } else {
-            cart.getItems().add(new CartItem(null, product.getId(), request.getQuantity(), product.getPrice()));
-        }
-
-        cartRepository.save(cart);
+        cartRepository.save(item);
     }
 
     @Override
     public CartResponse getCart(Long userId) {
-        Cart cart = cartRepository.findByUserId(userId).orElse(new Cart(null, userId, new ArrayList<>()));
+        List<CartItem> items = cartRepository.findByCustomerId(userId.intValue());
 
-        List<CartItemResponse> responses = cart.getItems().stream().map(item -> {
-            ProductResponse product = productClient.getProductById(item.getProductId());
-            double total = item.getPrice() * item.getQuantity();
-            return new CartItemResponse(item.getProductId(), product.getName(), item.getQuantity(), item.getPrice(), total);
-        }).toList();
+        List<CartItemResponse> itemResponses = items.stream().map(cartItem -> {
+            ProductResponse product = productClient.getProductById(cartItem.getProductId());
+            return CartItemResponse.builder()
+                    .productId(product.id())
+                    .productName(product.name())
+                    .price(product.price())
+                    .quantity(cartItem.getQuantity())
+                    .totalPrice(product.price() * cartItem.getQuantity())
+                    .build();
+        }).collect(Collectors.toList());
 
-        double grandTotal = responses.stream().mapToDouble(CartItemResponse::getTotal).sum();
-        return new CartResponse(userId, responses, grandTotal);
+        double totalAmount = itemResponses.stream().mapToDouble(CartItemResponse::getTotalPrice).sum();
+
+        return CartResponse.builder()
+                .items(itemResponses)
+                .totalAmount(totalAmount)
+                .build();
     }
 
     @Override
     public void updateCartItem(Long userId, UpdateCartRequest request) {
-        Cart cart = cartRepository.findByUserId(userId)
-                .orElseThrow(() -> new RuntimeException("Cart not found for user: " + userId));
-
-        CartItem item = cart.getItems().stream()
-                .filter(i -> i.getProductId().equals(request.getProductId()))
-                .findFirst()
+        CartItem item = cartRepository.findByCustomerIdAndProductId(userId.intValue(), request.getProductId())
                 .orElseThrow(() -> new RuntimeException("Item not found in cart"));
 
         item.setQuantity(request.getQuantity());
-        cartRepository.save(cart);
+        cartRepository.save(item);
     }
 
     @Override
+    @Transactional
     public void removeCartItem(Long userId, Integer productId) {
-        Cart cart = cartRepository.findByUserId(userId)
-                .orElseThrow(() -> new RuntimeException("Cart not found for user: " + userId));
-
-        cart.getItems().removeIf(item -> item.getProductId().equals(productId));
-        cartRepository.save(cart);
+        cartRepository.deleteByCustomerIdAndProductId(userId.intValue(), productId);
     }
 
     @Override
+    @Transactional
     public void clearCart(Long userId) {
-        Cart cart = cartRepository.findByUserId(userId)
-                .orElseThrow(() -> new RuntimeException("Cart not found for user: " + userId));
-
-        cart.getItems().clear();
-        cartRepository.save(cart);
+        cartRepository.deleteByCustomerId(userId.intValue());
     }
 }
